--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
     "@types/jest": "^25.2.3",
     "cra-template": "1.0.3",
     "react": "^16.8.6",
