--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "playfair",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://oscaramos.github.io/playfair",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@types/jest": "^25.2.3",
     "cra-template": "1.0.3",
+    "gh-pages": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.4.1"
@@ -14,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
